Fix unreadable richlistbox w/ dark theme
See #70

--- a/chrome/popup/popup.css
+++ b/chrome/popup/popup.css
@@ -50,6 +50,11 @@ menuitem,
 	color: inherit !important;
 }
 
+richlistbox
+{
+	color: inherit !important;
+}
+
 menu,
 menuitem,
 .autocomplete-richlistitem
